@@ -374,8 +374,9 @@ setup_xfail "thumb-*-pe*"
 setup_xfail "thumb-*-elf*"
 setup_xfail "arm*-*-linux*"
 
-# The S-record linker doesn't build special EABI sections.
-# setup_xfail "powerpc*-*-eabi*"
+# The S-record linker doesn't put common symbols in small data
+# the way the ELF linker does.
+setup_xfail "powerpc*-*-*"
 
 # The S-record linker doesn't include the .{zda} sections.
 setup_xfail "v850*-*-elf"
